fix title alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,5 @@
     font-weight: bold;
     color: brown;
     opacity: 90;
+    text-align: center;
 }
